[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/hurtbox.gd" type="Script" id=1]

[node name="Hurtbox" type="Area2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="invincibility_Ended" from="." to="." method="_on_Hurtbox_invincibility_Ended"]
[connection signal="invincibility_Started" from="." to="." method="_on_Hurtbox_invincibility_Started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
